<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">

    <!-- Toolbar -->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_player_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorAccent"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:title="@string/menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/player_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFFFF" />

        <EditText
            android:id="@+id/nameTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textColorHint="#88FFFFFF" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="40dp"
            android:text="@string/player_message"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFFFF" />

        <EditText
            android:id="@+id/messageTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/message"
            android:textColorHint="#88FFFFFF" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/registrationBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="65dp"
            android:background="#1E88E5"
            android:text="@string/registration"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView_player_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7932059771308904/6152423675" />
    </LinearLayout>
</RelativeLayout>
